test/sema/typeck/assign/reassign-tuple-variable.out
error: `let` binding cannot be reassigned.
--> reassign-tuple-variable.dora:3:5
 | fn main() {
 |     let _t = (1i32, 2i32);
 |     _t = (3i32, 4i32);
       ~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
