test/sema/typeck/assign/reassign-tuple-variable.dora
fn main() {
    let _t = (1i32, 2i32);
    _t = (3i32, 4i32);
}
